# imewlconverter-rs

./: Cargo.toml
.github/workflows/: commit.yml  release.yml  rust-ci.yml
examples/: test_input.txt  test_qq.txt  test_rime.txt
imewlconverter-cli/: Cargo.toml
imewlconverter-cli/src/: main.rs
imewlconverter-core/: Cargo.toml
imewlconverter-core/src/: data.rs  error.rs  export.rs  filter.rs  generate.rs  helpers.rs  import.rs  lib.rs  rank.rs  resource.rs  translate.rs
imewlconverter-core/src/export/: qq_pinyin.rs  rime.rs
imewlconverter-core/src/filter/: length.rs  rank.rs
imewlconverter-core/src/generate/: pinyin.rs
imewlconverter-core/src/helpers/: pinyin.rs
imewlconverter-core/src/import/: baidu_pinyin.rs  chinese_pyim.rs  fit_input.rs  google_pinyin.rs  libpinyin.rs  ms_pinyin.rs  pinyin_jiajia.rs  qq_pinyin.rs  qq_wubi.rs  rime.rs  sina_pinyin.rs  sogou_pinyin.rs  sogou_scel.rs  wubi.rs  ziguang_pinyin.rs
imewlconverter-core/tests/: real_file_test.rs
